tests/models/struct/named/i128/pass/gt.rs
use dade::model;
#[model]
struct TestModel {
    #[field(gt = 2)]
    value: i128,
}
fn main() {}
