tests/models/struct/named/i128/fail/min_length.rs
use dade::model;
#[model]
struct TestModel {
    #[field(min_length = 2)]
    value: i128,
}
fn main() {}
